syntax = "proto3";
option go_package = "/pb";

message Template {
  repeated string values = 1;
}


message RawValue {
  oneof test_oneof {
    string str = 1;
    bool bool = 2;
    double number_double = 3;
    int32 number_int32 = 4;
  }
}

message Item {
  bool isArr = 1;
  bytes templateHash = 2;
  repeated Item items = 3;
  RawValue rawValue = 4;
}
